--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -6,7 +6,8 @@
       <p class="text-class"  [@fadeToggle]=currentState >Please enter you name and press enter</p>
     </div>
     <div class="flex-outer">
-      <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid">
+        <!-- [disabled]="!userForm.valid" -->
+      <button type="submit" class="btn btn-primary">
         Submit
       </button>
     </div>
