--- a/src/app/workboard/workboard.component.html
+++ b/src/app/workboard/workboard.component.html
@@ -7,6 +7,7 @@
     <p [@crossfade]=dataState>{{parentText}}</p>
     <button id="callChild" (click)="sayChildHandler($event)">SAY HAI TO CHILD</button>
     <button (click)="fetchRSS($event)">FETCH RSS</button>
+    <button (click)="logout($event)">Logout</button>
 </div>
 <app-action data="{{data}}" (callSayToParent)="callParentHandler($event)"></app-action>
 
